HW2/part4/t15.output
running e2c
compiling the C generated code
t15.c: In function ‘main’:
t15.c:4:1: warning: useless type name in empty declaration
 int ;
 ^
t15.c:5:2: error: expected expression before ‘=’ token
  = 999;
  ^
t15.c:6:15: error: expected expression before ‘)’ token
 printf("",  - );
               ^
t15.c:8:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t15.c:9:1: error: expected ‘}’ before ‘else’
 else if( 0 >= ( - 99)){
 ^
t15.c:10:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 2222);
        ^
t15.c:11:1: error: expected ‘}’ before ‘else’
 else if( 0 >= ( - 999)){
 ^
t15.c:12:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 3333);
        ^
t15.c:13:1: error: expected ‘}’ before ‘else’
 else {printf("", 4444);
 ^
t15.c:13:14: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 else {printf("", 4444);
              ^
t15.c:14:2: error: expected expression before ‘=’ token
  = 99;
  ^
t15.c:16:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t15.c:17:1: error: expected ‘}’ before ‘else’
 else if( 0 >= ( - 99)){
 ^
t15.c:18:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 2222);
        ^
t15.c:19:1: error: expected ‘}’ before ‘else’
 else if( 0 >= ( - 999)){
 ^
t15.c:20:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 3333);
        ^
t15.c:21:1: error: expected ‘}’ before ‘else’
 else {printf("", 4444);
 ^
t15.c:21:14: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 else {printf("", 4444);
              ^
t15.c:22:2: error: expected expression before ‘=’ token
  = 8888;
  ^
t15.c:24:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t15.c:25:1: error: expected ‘}’ before ‘else’
 else if( 0 >= ( - 99)){
 ^
t15.c:26:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 2222);
        ^
t15.c:27:1: error: expected ‘}’ before ‘else’
 else if( 0 >= ( - 999)){
 ^
t15.c:28:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 3333);
        ^
t15.c:29:1: error: expected ‘}’ before ‘else’
 else {printf("", 4444);
 ^
t15.c:29:14: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 else {printf("", 4444);
              ^
t15.c:30:2: error: expected expression before ‘=’ token
  = 7777;
  ^
t15.c:32:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t15.c:33:1: error: expected ‘}’ before ‘else’
 else if( 0 >= ( - 99)){
 ^
t15.c:34:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 2222);
        ^
t15.c:35:1: error: expected ‘}’ before ‘else’
 else if( 0 >= ( - 999)){
 ^
t15.c:36:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 3333);
        ^
t15.c:37:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t15.c:38:1: error: expected declaration or statement at end of input
 }
 ^
t15.c:38:1: error: expected declaration or statement at end of input
t15.c:38:1: error: expected declaration or statement at end of input
t15.c:38:1: error: expected declaration or statement at end of input
